Quorum/Library/Tests/TemplatingGenerated/Pass/TwoTypeObjObjBooleanRetnumber.quorum
class Main
    action Main
        Boolean one
        one:SetValue(true)
        Boolean two
        two:SetValue(true)
        Yoda<Boolean, Boolean, number> yoda
        check
            number ret = yoda:useForce(one, two)
        detect e
            output "passed"
        end
     end
end
