Quorum/Library/Tests/TemplatingGenerated/Fail/TwoTypeObjObjBooleanRetTextObjFail.quorum
class Main
    action Main
        Boolean one
        one:SetValue(true)
        Boolean two
        two:SetValue(true)
        Yoda<Boolean, Boolean, Text> yoda
        boolean wrongRet = yoda(one, two)
     end
end
